[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/8-Bit Wonder/8-Bit Wonder.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://controls/InteractiveButton/InteractiveButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/MainMenu/model_4.png" type="Texture" id=3]
[ext_resource path="res://scenes/Summary/Summary.gd" type="Script" id=4]
[ext_resource path="res://controls/ScoreBoard/ScoreBoard.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/8-Bit Wonder/8-Bit Wonder.tres" type="DynamicFont" id=6]
[ext_resource path="res://controls/RouteMap/RouteMap.tscn" type="PackedScene" id=7]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.4, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Summary" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuParticles" type="CPUParticles2D" parent="."]
position = Vector2( 512, 300 )
amount = 128
lifetime = 4.0
preprocess = 4.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
linear_accel = 30.0
scale_amount = 6.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modelleft" type="TextureRect" parent="HBoxContainer"]
margin_right = 248.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 280.0
margin_right = 712.0
margin_bottom = 568.0
rect_min_size = Vector2( 432, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 432.0
margin_bottom = 67.0
custom_constants/separation = 16

[node name="Score" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 432.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 6 )
text = "YOUR SCORE
0000000000"
align = 1
valign = 1

[node name="RouteMap" parent="HBoxContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 7 )]
visible = false
margin_top = 83.0
margin_right = 432.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 175 )
Route = PoolVector2Array( 0, 0, 0, 1, 1, 1, 2, 1, 2, 0, 2, -1, 3, -1, 3, -2, 4, -2, 3, -2, 3, -3, 2, -3, 2, -2, 2, -1, 2, -2, 2, -1, 2, -2, 2, -3, 3, -3, 3, -4, 3, -5, 2, -5, 2, -4, 3, -4, 3, -3, 3, -4, 4, -4, 4, -3, 3, -3, 4, -3, 5, -3, 6, -3, 6, -4, 5, -4, 4, -4, 4, -5, 4, -6, 4, -7, 4, -8, 5, -8, 5, -7, 5, -6, 5, -7, 4, -7, 4, -6, 4, -7, 4, -8, 4, -9, 4, -8, 4, -7, 3, -7, 2, -7, 2, -8, 2, -7, 2, -8, 3, -8, 4, -8, 4, -7, 3, -7, 3, -6, 3, -5, 2, -5, 1, -5, 2, -5, 2, -6, 1, -6, 1, -5, 1, -4, 0, -4, 0, -3, 1, -3, 2, -3, 3, -3, 4, -3, 4, -2, 5, -2, 4, -2, 4, -1, 4, 0, 3, 0, 3, -1, 3, 0, 2, 0, 2, 1, 2, 0, 1, 0, 2, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 2, 0, 1, 0, 0, 1, 0, 2, 0, 2, 1, 2, 0, 3, 0, 3, -1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 432.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 32 )

[node name="HighScore" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_right = 432.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 6 )
text = "NEW HIGH SCORE"
align = 1
valign = 1

[node name="BlinkTimer" type="Timer" parent="HBoxContainer/VBoxContainer/VBoxContainer2/HighScore"]
wait_time = 0.3

[node name="ScoreBoard" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 131.0
margin_right = 432.0
margin_bottom = 520.0
LimitScores = false

[node name="MainMenu" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 536.0
margin_right = 432.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 2 )
text = "MAIN MENU"

[node name="modelright" type="TextureRect" parent="HBoxContainer"]
margin_left = 744.0
margin_right = 992.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="timeout" from="HBoxContainer/VBoxContainer/VBoxContainer2/HighScore/BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
